--- a/blog/themes/beg/static/css/styles.css
+++ b/blog/themes/beg/static/css/styles.css
@@ -293,3 +293,14 @@ article.li.sm>header {
 }
 
 
+figure {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
