Fix home page anchor color and home button size

--- a/blog/themes/aether/layouts/partials/nav-bar.html
+++ b/blog/themes/aether/layouts/partials/nav-bar.html
@@ -1,5 +1,5 @@
 <nav class="nav-bar side-padding">
-  <h1 class="nav-header"><a href="{{ .Site.BaseURL }}" class="nav-text">
+  <h1 class="nav-header"><a href="{{ .Site.BaseURL }}" class="nav-text nav-link">
     {{- if isset $.Site.Params "brand"}}
       {{- $.Site.Params.brand -}}
     {{ else }}
