--- a/blog/themes/aether/layouts/_default/li.html
+++ b/blog/themes/aether/layouts/_default/li.html
@@ -1,5 +1,5 @@
 <a ontouchstart="cardPressed.call(this)" ontouchend="cardReleased.call(this)" ontouchmove="cardReleased.call(this)" 
-  href="{{ .Permalink }}" class="card blog-card" rel="bookmark" >
+  href="{{ .Permalink }}" class="card blog-card nav-link" rel="bookmark" >
     {{ if isset .Params "featuredimage" -}}
     <div class="card-img-container">
       <picture>
