--- a/blog/themes/aether/static/css/style.css
+++ b/blog/themes/aether/static/css/style.css
@@ -37,6 +37,9 @@ strong {
     z-index: 105;
     font-size: 0.8em;
 }
+.nav-link {
+    color: #141823;
+}
 .hamburger-menu {
     display: block;
     position: relative;
@@ -146,7 +149,7 @@ strong {
     box-shadow: 0 0.7rem 1.4rem 0 rgba(0,0,0,0.25), 0 0.5rem 0.5rem 0 rgba(0,0,0,0.22);
 }
 .list-header {
-    margin: 6em 0;
+    margin: 3em 0;
     text-align: center;
 }
 .list-header-title {
@@ -241,7 +244,7 @@ strong {
 }
 .end-nav {
     width: 100%;
-    max-width: 20rem;
+    max-width: 15rem;
 }
 .pagination-nav {
     margin: 2em 0;
