--- a/blog/themes/aether/layouts/_default/li.html
+++ b/blog/themes/aether/layouts/_default/li.html
@@ -6,8 +6,8 @@
         {{ if (fileExists (printf "%s/%s" "static" (replace (.Params.featuredimage) (path.Ext .Params.featuredimage) ".webp"))) -}}
           <source srcset="{{ replace (.Params.featuredimage) (path.Ext (.Params.featuredimage)) ".webp" | absURL }}" type="image/webp">
         {{- end }}
-        <source srcset="{{ .Params.featuredimage | absURL }}">
-        <img src="{{.Params.featuredimage | absURL }}" class="card-img" {{ if isset .Params "featuredimagedescription" }}alt="{{.Params.featuredimagedescription}}"{{end}}>
+        <source srcset="{{ .Permalink }}{{ .Params.featuredimage }}">
+        <img src="{{ .Permalink }}{{.Params.featuredimage }}" class="card-img" {{ if isset .Params "featuredimagedescription" }}alt="{{.Params.featuredimagedescription}}"{{end}}>
       </picture>
     </div>
     {{- end }}
