--- a/blog/themes/aether/layouts/_default/li-next.html
+++ b/blog/themes/aether/layouts/_default/li-next.html
@@ -1,5 +1,5 @@
 <a ontouchstart="cardPressed.call(this)" ontouchend="cardReleased.call(this)" ontouchmove="cardReleased.call(this)" 
-  href="{{ .Permalink }}" class="card blog-card" rel="bookmark" >
+  href="{{ .Permalink }}" class="card blog-card nav-link" rel="bookmark" >
     {{ if isset .Params "featuredimage" }}
     <div class="card-img-container">
       <p class="card-img-overlay">Next Article</p>
@@ -7,8 +7,8 @@
         {{ if (fileExists (printf "%s/%s" "static" (replace (.Params.featuredimage) (path.Ext .Params.featuredimage) ".webp"))) -}}
           <source srcset="{{ replace (.Params.featuredimage) (path.Ext (.Params.featuredimage)) ".webp" | absURL }}" type="image/webp">
         {{- end }}
-        <source srcset="{{ .Params.featuredimage | absURL }}">
-        <img src="{{.Params.featuredimage | absURL }}" class="card-img" {{ if isset .Params "featuredimagedescription" }}alt="{{.Params.featuredimagedescription}}"{{end}}>
+        <source srcset="{{ .Permalink }}{{ .Params.featuredimage }}">
+        <img src="{{ .Permalink }}{{ .Params.featuredimage }}" class="card-img" {{ if isset .Params "featuredimagedescription" }}alt="{{.Params.featuredimagedescription}}"{{end}}>
       </picture>
     </div>
     {{ end }}
