Add footer with author info

--- a/blog/themes/aether/layouts/_default/single.html
+++ b/blog/themes/aether/layouts/_default/single.html
@@ -30,6 +30,7 @@
     <nav class="end-nav side-padding">
       {{ partial "home-card.html" . }}
     </nav>
+    {{ partial "footer.html" . }}
     {{ partial "scripts.html" . }}
   </body>
 </html>
