--- a/blog/themes/aether/layouts/partials/footer.html
+++ b/blog/themes/aether/layouts/partials/footer.html
@@ -31,6 +31,7 @@
         </div>
       </div>
       <article class="card-body">
+        <h3>{{ .Site.Params.author }} - {{ .Site.Params.authorTitle }}</h3>
         <p class="card-text">{{ .Site.Params.authorDescription }}</p>
       </article>
     </div>
