Try a fix for chromeos chrome

--- a/blog/themes/aether/layouts/partials/footer.html
+++ b/blog/themes/aether/layouts/partials/footer.html
@@ -3,7 +3,7 @@
   <div class="card-container">
     <div class="blog-card">
       <div class="card-img-container">
-        <picture>
+        <picture class="social">
           <source srcset="/{{ .Site.Params.authorImage }}">
           <img src="/{{.Site.Params.authorImage }}" class="avatar-image">
         </picture>
